spacing corrections

--- a/src/containers/discover/index.section.module.scss
+++ b/src/containers/discover/index.section.module.scss
@@ -1,14 +1,10 @@
 @import '../../styles/common';
 
-.section {
-	margin-bottom: 48px;
-}
-
 .section:last-child {
 	margin-bottom: 0;
 }
 
-.section > h5 {
+.section>h5 {
 	display: flex;
 	justify-content: space-between;
 }
